# super_state_machine

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: errors.rst  extras.rst  machines.rst  utils.rst
history/: 1407581130-b62614d  1407582678-caa44f2  1407666287-fedc0af  1407666448-5a32a79  1407703403-42329f2  1407794249-63f4c48  1410124848-a7c2d49  1410124908-ed5aa13  1410723997-3984744  1412929972-7990b55  1412930164-cf8efee  1474826958-1400e65  1474842932-35adaf2  1474843279-9b9fe47  1474844703-35422ab  1475183576-cd11c24  1757170325825425-2416235  1757170369437610-0baf763
src/super_state_machine/: __init__.py  extras.py  machines.py  utils.py
src/tests/: test_extras.py  test_machines.py  test_transitions.py  test_utils.py
super_state_machine/: __init__.py  errors.py  extras.py  machine.py  machines.py  utils.py
tests/: test_extras.py  test_machines.py  test_project.py  test_super_state_machine.py  test_transitions.py  test_utils.py
