[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "super_state_machine"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
authors = [{ name = "Szczepan Cieślik", email = "szczepan.cieslik@gmail.com" }]
maintainers = [
  { name = "Eric Dill", email = "eric.dill@maxpoint.com" },
  { name = "Thomas A Caswell", email = "tcaswell@gmail.com" },
]

[project.optional-dependencies]
dev = ["coverage", "mccabe", "pytest", "pytest-cov"]
docs = ["sphinx"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.write]
file = "src/super_state_machine/_version.py"
